# meta-language

./: .gitattributes  .gitignore  .gitkeep  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: js.yml  release.yml  rust.yml
benches/: competitor_bench.rs  corpus-manifest.json
changelog.d/: 20260501_decouple_docs_deploy.md  20260503_111700_file_size_warning_threshold.md  20260509_031015_human_readable_release_titles.md  20260509_205000_docker_hub_release_publishing.md  20260512_172908_github_pages_artifact_deploy.md  20260512_230053_document_pages_source_prerequisite.md  20260515_074404_track_browser_commander_preview_regen.md  20260515_223000_cargo_lock_release_sync.md  20260529_000000_classify_crates_io_rate_limit.md  20260529_205200_fix_cancel_in_progress_condition.md  20260529_205500_crate_package_size_guard.md  20260605_140000_meta_language_core.md  20260605_191500_forbid_src_tests.md  20260605_221500_snapshot_versioning.md  20260606_170500_plain_text_container_target.md  20260606_180000_natural_language_target_order.md  20260606_211500_natural_language_annotations.md  20260607_004700_visual_basic_grammar.md  20260607_153000_sql_ansi_grammar.md  20260607_160527_query_matcher_enrichment.md  20260607_170000_persistent_snapshot_sharing.md  20260607_183000_query_transform_surface.md  20260607_190802_common_concept_ontology.md  20260607_193500_cross_language_reconstruction.md  20260607_203000_external_competitor_corpora.md  20260608_061500_lino_structural_parsing.md  20260610_000000_readonly_mutable_engine.md  20260610_000000_ruby_grammar.md  20260610_000000_typescript_grammar.md  20260610_120000_data_exchange_format_grammars.md  20260611_000000_pluggable_parser_registry.md  20260611_000000_second_tier_programming_grammars.md  20260611_091500_rust_links_codec.md  20260611_093500_doublets_storage_backend.md  20260611_120000_exact_match_concept_space.md  20260611_120000_natural_language_grammar_parsing.md  20260611_143000_language_profiles.md  20260611_150000_incremental_reparse_structural_diff.md  20260611_190000_api_style_parity_contract.md  20260611_223000_perl_tree_sitter_grammar.md  (+28 more)
docs/: cross-format-fidelity.md  docx-fidelity.md  parity-roadmap.md  pdf-fidelity.md
docs/ci-cd/: troubleshooting.md
docs/grammar/: README.md  architecture.md  authoring.md  cli-and-runtime.md  codegen.md  fidelity.md  import-export.md  inference.md  translation.md
docs/site/: app.js  index.html  styles.css
examples/: basic_usage.rs  document_formatting_round_trip.rs  docx_round_trip.rs  grammar_infer_and_emit_gbnf.rs  grammar_infer_and_emit_js.rs  pdf_round_trip.rs
examples/grammar_pipeline_support/: mod.rs
experiments/: data_format_grammar_check.rs  data_format_mixed_check.rs  gen_fixture.rs  inspect-html-embedding.rs  inspect-vb-recovery.rs  pdf_check.rs  pdf_parser_check.rs  second_tier_grammar_check.rs  second_tier_recovery_check.rs  typescript_smoke.rs
experiments/issue-93-subissues/: issue-map.tsv  phase1-create.sh  phase3-blockedby.sh  update-readme.sh
js/: README.md  package-lock.json  package.json
js/scripts/: check-js-rust-parity.mjs
js/src/: access.js  api-style-fixtures.js  grammar.js  index.d.ts  index.js  language-profile.js  network.js  primitives.js  query-algebra.js  query.js  regions.js  semantics.js  substitution.js  transform.js  translation.js
js/tests/: access.test.js  core.test.js  language-profile.test.js  package-release.test.js  parity.test.js  query-algebra.test.js  regions.test.js  shared-dialog-schema.test.js
parity/: language-features.json
rust/: CHANGELOG.md  Cargo.toml  README.md
rust/benches/: corpus-manifest.json
rust/changelog.d/: 20260503_111500_ci_timeouts.md  20260604_172100_github_release_validation.md  20260606_190000_tree_sitter_front_end.md  20260606_195500_mixed_mode_injection.md  20260607_160000_delphi_object_pascal_grammar.md  20260607_190000_self_description_roots.md  20260607_213000_adopt_ecosystem_corpora.md  20260608_123900_probabilistic_truth_values.md  20260610_000000_go_grammar.md  20260611_000000_lino_network_serialization.md  20260611_000000_second_tier_programming_grammars.md  20260611_140000_translation_rule_registry.md  20260611_180000_query_transform_algebra.md  20260611_coverage_parity_wave2.md  20260619_000000_issue_93_grammar_inference_planning.md  20260619_181500_abnf_importer.md  20260619_193000_tree_sitter_json_importer.md  20260619_210000_antlr_importer.md  20260619_213000_lark_gbnf_importers.md  20260619_233000_javascript_parser_codegen.md  20260620_000000_grammar_translation.md  20260620_020000_lexical_inference.md  20260620_050000_cfg_inference.md  20260620_060000_inference_advisors.md  20260620_090000_active_learning_oracle.md  20260620_100000_cli_grammar_subcommands.md  20260620_120000_competitor_benchmark_suite.md  20260620_184500_javascript_meta_language.md  20260621_173000_js_truth_value_semantics.md  20260621_210000_module_parity_gate.md  20260622_000000_shared_dialog_schema.md  20260628_173000_js_token_link_type_alias.md  20260628_231500_js_translation_rules_lino.md  20260629_193000_js_npm_release_lockstep.md  20260629_201500_ci_false_positive_cleanup.md
rust/examples/: custom_parser_registry.rs  grammar_infer_and_emit_rust.rs  source_generation.rs
scripts/: build-site.rs  check-crate-size.rs  check-no-src-tests.rs  create-github-release.rs  publish-crate.rs  rust-paths.rs  version-and-commit.rs  wait-for-crate.rs
src/: access.rs  api_styles.rs  concept_ontology.rs  configuration.rs  data_format_parser.rs  language_fixtures.rs  language_parser.rs  language_profile.rs  lib.rs  link_flags.rs  link_network.rs  lino_parser.rs  lino_serialization.rs  main.rs  mixed_regions.rs  natural_language.rs  natural_language_grammar.rs  parity.rs  parity_fixtures.rs  parser_registry.rs  pdf_parser.rs  query.rs  reconstruction.rs  rust_codec.rs  self_description.rs  semantics.rs  snapshots.rs  source.rs  source_generation.rs  storage.rs  substitution.rs  transform.rs  tree_sitter_adapter.rs  verification.rs
web/: Cargo.toml
web/tests/: parse.rs
(+387 files in other folders)
