[package]
name = "meta-language"
version = "0.39.0"
edition = "2021"
description = "A self-describing links-network core for lossless language representation"
readme = "README.md"
license = "Unlicense"
keywords = ["links", "language", "cst", "ast"]
categories = ["parser-implementations", "data-structures"]
repository = "https://github.com/link-foundation/meta-language"
documentation = "https://github.com/link-foundation/meta-language"
rust-version = "1.77"

# Narrow allowlist of files shipped in the published `.crate` archive.
# Keeping this list tight prevents docs, case studies, generated CI artifacts,
# changelog fragments, and experiments from silently inflating the release
# archive past the crates.io 10 MiB upload limit. See issue #58.
include = [
    "src/**/*.rs",
    "src/data/semantic-lexicon.json",
    "examples/**/*.rs",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[lib]
name = "meta_language"
path = "src/lib.rs"

[[bin]]
name = "meta-language"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
lindera = { version = "3.0.7", default-features = false, features = ["embed-jieba"] }
lingua = { version = "1.8.0", default-features = false, features = [
    "arabic",
    "bengali",
    "chinese",
    "english",
    "french",
    "hindi",
    "portuguese",
    "russian",
    "spanish",
    "urdu",
] }
links-notation = "0.13"
serde_json = "1"
tree-sitter = "0.25.8"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-graphql = "0.1.0"
tree-sitter-html = "0.23.2"
tree-sitter-ini = "1.4.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-lua = "0.2.0"
tree-sitter-pascal = "0.10.2"
tree-sitter-php = "0.24.2"
tree-sitter-proto = "0.4.0"
tree-sitter-python = "0.25.0"
tree-sitter-r = "1.2.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-scala = "0.25.1"
tree-sitter-sequel = "0.3.11"
tree-sitter-swift = "0.7.3"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-vb-dotnet = "0.1.0"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.7.2"
unicode-bidi = "0.3.18"
unicode-normalization = "0.1.25"
unicode-segmentation = "1.13.3"
whatlang = "0.18.0"

[dev-dependencies]
links-notation = "0.13"
regex = "1"
walkdir = "2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some common patterns
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
