# Standalone WebAssembly demo crate for the meta-language website.
#
# This crate is intentionally NOT a member of the main `meta-language` package
# and is excluded from the published crate (see the root Cargo.toml `include`
# allowlist). It wraps the `links-notation` crate — the wasm-compatible
# structural substrate of the meta language — so the website can offer an
# interactive "Links Notation playground" that runs entirely in the browser.
#
# The full `meta-language` crate cannot be compiled to `wasm32-unknown-unknown`
# because it links native tree-sitter C grammars and other non-wasm
# dependencies; `links-notation` is pure Rust and compiles cleanly to wasm.
[package]
name = "meta-language-web"
version = "0.1.0"
edition = "2021"
description = "WebAssembly demo for the meta-language website (Links Notation playground)"
license = "Unlicense"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
links-notation = "0.13"
wasm-bindgen = "0.2"
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
